examples/minikube/hotrod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotrod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotrod
  template:
    metadata:
      name: hotrod
      labels:
        app: hotrod
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: hotrod
              weight: 10
      containers:
        - name: hotrod
          image: jaegertracing/example-hotrod:latest
          ports:
          - name: http
            containerPort: 8080
            protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http

---
apiVersion: v1
kind: Service
metadata:
  name: hotrod
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: hotrod

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotrod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hotrod.mk
      http:
        paths:
          - backend:
              service:
                name: hotrod
                port:
                  number: 8080
            path: /
            pathType: Prefix
