examples/minikube/jaeger.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
spec:
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:1.32.0
          ports:
            - containerPort: 16686
              name: ui
              protocol: TCP
            - containerPort: 6831
              name: ingest
              protocol: UDP

---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
spec:
  ports:
    - port: 16686
      name: ui
      protocol: TCP
    - port: 6831
      name: ingest
      protocol: UDP
  selector:
    app: jaeger

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: jaeger.mk
      http:
        paths:
          - backend:
              service:
                name: jaeger
                port:
                  number: 16686
            path: /
            pathType: Prefix
