examples/minikube/loki.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - name: loki
          image: grafana/loki:2.4.2
          volumeMounts:
            - mountPath: /etc/loki
              name: config
              readOnly: true
          ports:
            - containerPort: 3100
              name: http
              protocol: TCP
            - containerPort: 9096
              name: grpc
              protocol: TCP
      volumes:
        - name: config
          configMap:
            name: loki
            items:
              - key: config
                path: local-config.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: loki
spec:
  ports:
    - port: 3100
      name: http
      protocol: TCP
  selector:
    app: loki

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: loki.mk
      http:
        paths:
          - backend:
              service:
                name: loki
                port:
                  number: 3100
            path: /
            pathType: Prefix
