examples/minikube/prometheus.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
        - name: prometheus
          image: quay.io/prometheus/prometheus:v2.31.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
          readinessProbe:
            httpGet:
              port: 9090
              path: /-/ready
          livenessProbe:
            httpGet:
              port: 9090
              path: /-/healthy
          volumeMounts:
            - mountPath: /etc/prometheus
              name: config
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: prometheus
            items:
              - key: config
                path: prometheus.yml

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  ports:
    - port: 9090
      protocol: TCP
  selector:
    app: prometheus

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: prometheus.mk
      http:
        paths:
          - backend:
              service:
                name: prometheus
                port:
                  number: 9090
            path: /
            pathType: Prefix
